tests/miz/pass/types/pass_type_elaboration_local_mode_cached_four_edge_chain_expansion_001.miz
definition
  mode BaseModeDef: BaseMode is set;
end;

definition
  mode InnerModeDef: InnerMode is BaseMode;
end;

definition
  mode MiddleModeDef: MiddleMode is InnerMode;
end;

definition
  mode OuterModeDef: OuterMode is MiddleMode;
end;

definition
  mode TooDeepModeDef: TooDeepMode is OuterMode;
end;

reserve y for OuterMode;
reserve z for TooDeepMode;
