tests/miz/fail/types/fail_type_elaboration_attributed_local_mode_attributed_rhs_chain_expansion_gap_001.miz
definition
  let x be set;
  attr MarkedDef: x is marked means thesis;
end;

definition
  mode BaseModeDef: BaseMode is marked set;
end;

definition
  mode ChainModeDef: ChainMode is BaseMode;
end;

reserve z for marked ChainMode;
